--- a/Sprint III/Asynctask.razor
+++ b/Sprint III/Asynctask.razor
@@ -33,9 +33,9 @@
   private List<Fish> GetFishes()
   {
     return new List<Fish>(){
-      new Fish(){FishSpecie = "Beta 1", DescriptionSpecie = "Descripción del beta 1", FishImage = "/Images/beta2.jpg",
-      new Fish(){FishSpecie = "Beta 2", DescriptionSpecie = "Descripción del beta 2", FishImage = "/Images/beta8.jpg",
-      new Fish(){FishSpecie = "Beta 3", DescriptionSpecie = "Descripción del beta 3", FishImage = "/Images/beta3.jpg",
+      new Fish(){FishSpecie = "Beta 1", DescriptionSpecie = "Descripción del beta 1", FishImage = "/Images/beta2.jpg"},
+      new Fish(){FishSpecie = "Beta 2", DescriptionSpecie = "Descripción del beta 2", FishImage = "/Images/beta8.jpg"},
+      new Fish(){FishSpecie = "Beta 3", DescriptionSpecie = "Descripción del beta 3", FishImage = "/Images/beta3.jpg"},
     };
   }
   protected override async Task OnInitializedAsync()
